tests/negative/test-fail-call1.rooc
//function params number mismatch
fun add(a: int, b: int) -> int {
    return a + b;
}

fun main() -> int {
    print_int(add(2.0));
    return 0;
}